--- a/charts/tp-provisioner-agent/templates/deployment.yaml
+++ b/charts/tp-provisioner-agent/templates/deployment.yaml
@@ -35,6 +35,8 @@ spec:
             value: {{ .Release.Namespace }}
           - name: RELEASE_NAME
             value: {{ .Release.Name }}
+          - name: DATAPLANE_ID
+            value: {{ .Values.global.tibco.dataPlaneId }}
         {{- with .Values.resources }}
         resources:
           {{- toYaml . | nindent 10}}
