Update workshop doc

--- a/charts/dp-config-aks/values.yaml
+++ b/charts/dp-config-aks/values.yaml
@@ -26,6 +26,9 @@ tls:
   certificateNamespace: ingress-system
   certificateSecretName: cic-certificate-production-azure
 
+clusterIssuer:
+  create: true
+
 httpIngress:
   enabled: true
   name: nginx
