--- a/charts/dp-config-aks/templates/certificate-production.yaml
+++ b/charts/dp-config-aks/templates/certificate-production.yaml
@@ -2,11 +2,11 @@
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
+{{ if .Values.clusterIssuer.create -}}
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: cic-cert-subscription-scope-production
-  namespace: tibco-system
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
@@ -22,3 +22,4 @@ spec:
             environment: AzurePublicCloud
             managedIdentity:
               clientID: "{{ .Values.global.azureAwiAsoDnsClientId }}"
+{{- end }}
