--- a/charts/dp-config-aks/templates/certificate-staging.yaml
+++ b/charts/dp-config-aks/templates/certificate-staging.yaml
@@ -2,12 +2,12 @@
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
+{{ if .Values.clusterIssuer.create -}}
 {{if eq .Values.tls.setup "staging" -}}
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: cic-cert-subscription-scope-staging
-  namespace: tibco-system
 spec:
   acme:
     server: https://acme-staging-v02.api.letsencrypt.org/directory
@@ -36,4 +36,5 @@ spec:
     kind: ClusterIssuer
   dnsNames:
     - '*.{{ .Values.global.azureResourceGroup }}.{{ .Values.global.dnsSandboxSubdomain }}.{{ .Values.global.dnsGlobalTopDomain }}'
+{{- end }}
 {{- end }}
