--- a/charts/msg-ems-tp/templates/ftl.stateful.yaml
+++ b/charts/msg-ems-tp/templates/ftl.stateful.yaml
@@ -1,7 +1,7 @@
 #
 # Copyright (c) 2023. Cloud Software Group, Inc.
-# This file is subject to the license terms contained 
-# in the license file that is distributed with this file.  
+# This file is subject to the license terms contained
+# in the license file that is distributed with this file.
 #
 
 #   ${hostname}-${replicaId}.${serviceName}.${namespace}.svc.${clusterDomain}
@@ -18,6 +18,7 @@ apiVersion: apps/v1
 {{- $svcname := printf "%s-%s" $emsParams.ems.name "ems" -}}
 {{- $svcEms := printf "%s-%s" $emsParams.ems.name "ems" -}}
 {{- $svcEmsHost := printf "%s.%s.svc" $svcEms .Release.Namespace -}}
+{{- $svcEmsActiveHost := printf "%sactive.%s.svc" $svcEms .Release.Namespace -}}
 {{- $svcFtl := printf "%s-%s" $emsParams.ems.name "ftl" -}}
 {{- $svcFtlHost := printf "%s.%s.svc" $svcFtl .Release.Namespace -}}
 {{- $dataPvc := $emsParams.ems.logs.storageName -}}
@@ -62,6 +63,7 @@ spec:
                 {{ include "msg.dp.labels" . | indent 16 }}
                 {{ include "msg.dp.net.all" . | indent 16}}
                 tib-msg-stsname: "{{ $stsname }}"
+                tib-msg-stsrole: "standby"
                 name: ems
                 app: msg-ems-ftl
                 app.kubernetes.io/name: "ems"
@@ -89,7 +91,7 @@ spec:
             topologySpreadConstraints:
             - maxSkew: 1
               topologyKey: kubernetes.io/hostname
-              {{- if eq "false" ( $emsParams.ems.allowNodeSkew | default "true" ) }}
+              {{- if eq "no" ( $emsParams.ems.allowNodeSkew | default "yes" ) }}
               whenUnsatisfiable: DoNotSchedule
               {{- else }}
               whenUnsatisfiable: ScheduleAnyway
@@ -98,10 +100,9 @@ spec:
                 matchLabels:
                   tib-msg-stsname: "{{ $stsname }}"
                   tib-dp-release: "{{ .Release.Name }}"
-            {{- if eq $emsParams.dp.where "aws" }}
             - maxSkew: 1
               topologyKey: topology.kubernetes.io/zone
-              {{- if eq "false" ( $emsParams.ems.allowZoneSkew | default "true" ) }}
+              {{- if eq "no" ( $emsParams.ems.allowZoneSkew | default "yes" ) }}
               whenUnsatisfiable: DoNotSchedule
               {{- else }}
               whenUnsatisfiable: ScheduleAnyway
@@ -110,7 +111,6 @@ spec:
                 matchLabels:
                   tib-msg-stsname: "{{ $stsname }}"
                   tib-dp-release: "{{ .Release.Name }}"
-            {{- end }}
             containers:
             - name: "{{ $stsname }}"
               image: "{{ $emsParams.ems.image }}"
@@ -243,12 +243,12 @@ spec:
               {{ if .Values.ems.tcpEnable }}
               - name: EMS_TCP_URL
                 # the service load-balanced EMS TCP URL
-                value: "tcp://{{ $svcEmsHost }}:$(EMS_TCP_PORT),tcp://{{ $svcEmsHost }}:$(EMS_TCP_PORT)"
+                value: "tcp://{{ $svcEmsActiveHost }}:$(EMS_TCP_PORT),tcp://{{ $svcEmsHost }}:$(EMS_TCP_PORT)"
               {{ end }}
               {{ if .Values.ems.sslEnable }}
               - name: EMS_SSL_URL
                 # the service load-balanced EMS SSL URL
-                value: "ssl://{{ $svcEmsHost }}:$(EMS_SSL_PORT),ssl://{{ $svcEmsHost }}:$(EMS_SSL_PORT)"
+                value: "ssl://{{ $svcEmsActiveHost }}:$(EMS_SSL_PORT),ssl://{{ $svcEmsHost }}:$(EMS_SSL_PORT)"
               {{ end }}
               - name: TCM_WATCHDOG_CONFIG
                 value: "/logs/$(MY_POD_NAME)/boot/watchdog.yml"
