--- a/charts/o11y-service/values.yaml
+++ b/charts/o11y-service/values.yaml
@@ -61,7 +61,7 @@ global:
               host: "dummy"
               port: 4317
             es:
-              host: "tracesServer-config-es-host"
+              endpoint: "tracesServer-config-es-endpoint"
               port: 9200
               username: "tracesServer-config-es-username"
           secret:
@@ -151,7 +151,7 @@ global:
       namespace: dp-integration-default
     image:
       registry: 664529841144.dkr.ecr.us-west-2.amazonaws.com
-      tag: 665
+      tag: 821
 
 
 replicaCount: 1
