--- a/charts/oauth2-proxy-manifests/values.yaml
+++ b/charts/oauth2-proxy-manifests/values.yaml
@@ -96,6 +96,7 @@ extraArgs:
   skip-jwt-bearer-tokens: true
   skip-provider-button: true
   scope: openid email profile TSC
+  footer: "Secured by TIBCO Platform"
 
 extraEnv: []
 
