--- a/charts/distributed-lock-operator/templates/deployment.yaml
+++ b/charts/distributed-lock-operator/templates/deployment.yaml
@@ -20,6 +20,7 @@ spec:
       labels:
         {{- include "dp-core-distributed-lock-operator.shared.labels.standard" . | nindent 8 }}
         networking.platform.tibco.com/kubernetes-api: enable
+        egress.networking.platform.tibco.com/internet-web: enable
     spec:
       imagePullSecrets:
       - name: {{ .Values.global.cp.containerRegistry.secret }}
