--- a/charts/dp-configure-namespace/templates/sa.yaml
+++ b/charts/dp-configure-namespace/templates/sa.yaml
@@ -10,8 +10,8 @@
 kind: ServiceAccount
 apiVersion: v1
 metadata:
-  name: {{ include "dp-configure-namespace.serviceAccount" . }}
-  namespace: {{ include "dp-configure-namespace.primaryNamespaceName" . }}
+  name: {{ include "dp-configure-namespace.serviceAccount" . | quote }}
+  namespace: {{ include "dp-configure-namespace.primaryNamespaceName" . | quote }}
   labels:
     {{- include "dp-configure-namespace.labels" . | nindent 4 }}
 {{- end -}}
