--- a/charts/dp-configure-namespace/values.yaml
+++ b/charts/dp-configure-namespace/values.yaml
@@ -4,13 +4,13 @@
 
 global:
   tibco:
-    dataPlaneId: "abcd"
+    dataPlaneId: "dataplaneid"
     # Provide the name of primary namespace where dp-core-infrastrcuture is to be deployed
     # This namespace has the service account for which the role-bindig will be created for primary namespace and additional namespaces
-    primaryNamespaceName: "dp-namespace"
+    # primaryNamespaceName: "abcd"
     # Provide the name of the service account from primary namespace
     # This will be used for dp-core-infrastrcuture, capability provisioning, application deployment
-    serviceAccount: "sa"
+    # serviceAccount: "sa"
 
 # Use an already existing service account present in the primary namespace
 # Default value is true. Possible values are true, false
