--- a/charts/o11y-service/templates/secrets.yaml
+++ b/charts/o11y-service/templates/secrets.yaml
@@ -19,9 +19,9 @@ stringData:
   ES_SERVICE_LOG_INDEX_PASSWORD: {{ quote .Values.global.cp.resources.o11y.logsServer.secret.exporter.services.logindex.password }}
   logserver-app-proxy-password: {{ quote .Values.global.cp.resources.o11y.logsServer.secret.proxy.userapp.logindex.password }}
   #'logserver-app-expo-password' duplicate of 'ES_EXPORTER_LOG_INDEX_PASSWORD'
-  logserver-app-expo-password: {{ quote .Values.global.cp.resources.o11y.logsServer.secret.exporter.userapp.logindex.password }}
+  #logserver-app-expo-password: {{ quote .Values.global.cp.resources.o11y.logsServer.secret.exporter.userapp.logindex.password }}
   #'logserver-svc-expo-password' duplicate of 'ES_SERVICE_LOG_INDEX_PASSWORD'
-  logserver-svc-expo-password: {{ quote .Values.global.cp.resources.o11y.logsServer.secret.exporter.services.logindex.password }}
+  #logserver-svc-expo-password: {{ quote .Values.global.cp.resources.o11y.logsServer.secret.exporter.services.logindex.password }}
 {{- end }}
 #metricsserver
 {{- if eq .Values.global.cp.resources.o11y.metricsServer.kind "prometheus" }}
