--- a/charts/dp-configure-namespace/templates/role-binding.yaml
+++ b/charts/dp-configure-namespace/templates/role-binding.yaml
@@ -8,7 +8,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ include "dp-configure-namespace.dataPlaneId" . }}
+  name: {{ include "dp-configure-namespace.dataPlaneId" . | quote }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "dp-configure-namespace.labels" . | nindent 4 }}
@@ -18,5 +18,5 @@ roleRef:
   name: {{ include "dp-configure-namespace.dataPlaneId" . }}-ns-scope
 subjects:
 - kind: ServiceAccount
-  name: {{ include "dp-configure-namespace.serviceAccount" . }}
-  namespace: {{ include "dp-configure-namespace.primaryNamespaceName" . }}
+  name: {{ include "dp-configure-namespace.serviceAccount" . | quote }}
+  namespace: {{ include "dp-configure-namespace.primaryNamespaceName" . | quote }}
