--- a/charts/dp-core-infrastructure/charts/haproxy-ingress/templates/_podtemplate.yaml
+++ b/charts/dp-core-infrastructure/charts/haproxy-ingress/templates/_podtemplate.yaml
@@ -10,6 +10,7 @@ metadata:
   labels:
     {{- include "haproxy-ingress.selectorLabels" . | nindent 4 }}
     networking.platform.tibco.com/kubernetes-api: enable
+    egress.networking.platform.tibco.com/internet-web: enable
 {{- if .Values.controller.podLabels }}
     {{- toYaml .Values.controller.podLabels | nindent 4 }}
 {{- end }}
