--- a/charts/msg-ems-tp/templates/ftl.svc.yaml
+++ b/charts/msg-ems-tp/templates/ftl.svc.yaml
@@ -1,7 +1,7 @@
 #
 # Copyright (c) 2023. Cloud Software Group, Inc.
-# This file is subject to the license terms contained 
-# in the license file that is distributed with this file.  
+# This file is subject to the license terms contained
+# in the license file that is distributed with this file.
 #
 
 # .......... FTL SERVICE ..........
@@ -86,3 +86,4 @@ spec:
     protocol: TCP
   selector:
     tib-msg-stsname: "{{ $stsname }}"
+    tib-msg-stsrole: "leader"
