--- a/charts/o11y-service/templates/configmap.yaml
+++ b/charts/o11y-service/templates/configmap.yaml
@@ -16,24 +16,24 @@ data:
   otel-recvservice-port: {{ quote .Values.global.cp.resources.o11y.config.otel.receiver.service.port }}
   #logsserver
 {{- if eq .Values.global.cp.resources.o11y.logsServer.kind "elasticSearch" }}
-  logserver-app-logIndex: {{ .Values.global.cp.resources.o11y.logsServer.config.userapp.logindex }}
-  #ES_EXPORTER_LOG_INDEX_NAME duplicate of 'logserver-svc-logIndex'
+  #logserver-app-logIndex: {{ .Values.global.cp.resources.o11y.logsServer.config.userapp.logindex }}
+  #ES_EXPORTER_LOG_INDEX_NAME duplicate of 'logserver-app-logIndex'
   ES_EXPORTER_LOG_INDEX_NAME: {{ .Values.global.cp.resources.o11y.logsServer.config.userapp.logindex }}
-  logserver-svc-logIndex: {{ .Values.global.cp.resources.o11y.logsServer.config.services.logindex }}
+  #logserver-svc-logIndex: {{ .Values.global.cp.resources.o11y.logsServer.config.services.logindex }}
   #ES_SERVICE_LOG_INDEX_NAME duplicate of 'logserver-svc-logIndex'
   ES_SERVICE_LOG_INDEX_NAME: {{ .Values.global.cp.resources.o11y.logsServer.config.services.logindex }}
   logserver-proxy-app-endpoint: {{ .Values.global.cp.resources.o11y.logsServer.config.proxy.userapp.logindex.endpoint }}
-  logserver-proxy-app-userName: {{ .Values.global.cp.resources.o11y.logsServer.config.proxy.userapp.logindex.username }}
-  # duplicate of 'logserver-proxy-app-userName'
+  #logserver-proxy-app-userName: {{ .Values.global.cp.resources.o11y.logsServer.config.proxy.userapp.logindex.username }}
+  # ES_EXPORTER_LOG_INDEX_USERNAME duplicate of 'logserver-proxy-app-userName'
   ES_EXPORTER_LOG_INDEX_USERNAME: {{ .Values.global.cp.resources.o11y.logsServer.config.proxy.userapp.logindex.username }}
-  logserver-exporter-app-endpoint: {{ .Values.global.cp.resources.o11y.logsServer.config.exporter.userapp.logindex.endpoint }}
+  #logserver-exporter-app-endpoint: {{ .Values.global.cp.resources.o11y.logsServer.config.exporter.userapp.logindex.endpoint }}
   #ES_SERVER_EXPORTER_ENDPOINT duplicate of 'logserver-exporter-app-endpoint'
   ES_SERVER_EXPORTER_ENDPOINT: {{ .Values.global.cp.resources.o11y.logsServer.config.exporter.userapp.logindex.endpoint }}
   logserver-exporter-app-userName: {{ .Values.global.cp.resources.o11y.logsServer.config.exporter.userapp.logindex.username }}
-  logserver-exporter-svc-endpoint: {{ .Values.global.cp.resources.o11y.logsServer.config.exporter.services.logindex.endpoint }}
+  #logserver-exporter-svc-endpoint: {{ .Values.global.cp.resources.o11y.logsServer.config.exporter.services.logindex.endpoint }}
   #ES_SERVER_SERVICE_ENDPOINT duplicate of 'logserver-exporter-svc-endpoint'
   ES_SERVER_SERVICE_ENDPOINT: {{ .Values.global.cp.resources.o11y.logsServer.config.exporter.services.logindex.endpoint }}
-  logserver-exporter-svc-userName: {{ .Values.global.cp.resources.o11y.logsServer.config.exporter.services.logindex.username }}
+  #logserver-exporter-svc-userName: {{ .Values.global.cp.resources.o11y.logsServer.config.exporter.services.logindex.username }}
   #ES_SERVICE_LOG_INDEX_USERNAME duplicate of 'logserver-exporter-svc-userName'
   ES_SERVICE_LOG_INDEX_USERNAME: {{ .Values.global.cp.resources.o11y.logsServer.config.exporter.services.logindex.username }}
 {{- end }}
@@ -44,7 +44,7 @@ data:
 {{- end }}
   #tracesserver
 {{- if eq .Values.global.cp.resources.o11y.tracesServer.kind "jaeger" }}
-  jaeger-es-host: {{ .Values.global.cp.resources.o11y.tracesServer.config.es.host }}
+  jaeger-es-host: {{ .Values.global.cp.resources.o11y.tracesServer.config.es.endpoint }}
   jaeger-es-port: {{ quote .Values.global.cp.resources.o11y.tracesServer.config.es.port }}
   jaeger-es-username: {{ .Values.global.cp.resources.o11y.tracesServer.config.es.username }}
 {{- end }}
