[PDP-1716] update public repo for 1.0.1

--- a/charts/dp-config-aks/values.yaml
+++ b/charts/dp-config-aks/values.yaml
@@ -52,7 +52,7 @@ storageClass:
     name: azure-disk-sc
     default: false
     parameters:
-      skuname: StandardSSD_LRS
+      skuName: StandardSSD_LRS
     reclaimPolicy: "Delete"
     allowVolumeExpansion: true
     volumeBindingMode: WaitForFirstConsumer
