PDP-1848: Promote infra helm charts to public github repo
- Infra changes for 1.1.0 helm charts

--- a/charts/artifactmanager/Chart.yaml
+++ b/charts/artifactmanager/Chart.yaml
@@ -5,11 +5,6 @@
 #
 apiVersion: v2
 name: artifactmanager
-version: 1.0.25
-appVersion: "1.0.1"
-description: TIBCO Platform Dataplane Core -- Artifact Manager
-home: https://github.com/tibco/tp-iapp-artifactmanager.git
-icon: https://pbs.twimg.com/profile_images/1064638558110007296/K6HqaXwh_400x400.jpg
-maintainers:
-  - name: TIBCO Platform Dev Team
-    email: compute-dev@tibco.com
+version: 1.1.6
+appVersion: "1.1.0"
+description: Data Plane Core -- Artifact Manager
