--- a/charts/artifactmanager/values.yaml
+++ b/charts/artifactmanager/values.yaml
@@ -130,7 +130,13 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
+resources:
+  requests:
+    cpu: 50m
+    memory: 128Mi
+  limits:
+    cpu: "2"
+    memory: 2048Mi
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -238,3 +244,16 @@ volumes:
 fluentbit:
   image:
     tag: 2.1.6
+  resources:
+    requests:
+      cpu: 10m
+      memory: 15Mi
+    limits:
+      cpu: 50m
+      memory: 30Mi
+
+strategy:
+#  rollingUpdate:
+#    maxSurge: 1
+#  type: RollingUpdate
+  type: Recreate
