--- a/charts/o11y-service/Chart.yaml
+++ b/charts/o11y-service/Chart.yaml
@@ -5,11 +5,6 @@
 #
 apiVersion: v2
 name: o11yservice
-version: 1.0.55
-appVersion: "1.0.1"
-description: TIBCO Platform Dataplane Infrastructre Core -- o11y-service
-home: https://github.com/tibco/tp-o11y-service.git
-icon: https://pbs.twimg.com/profile_images/1064638558110007296/K6HqaXwh_400x400.jpg
-maintainers:
-  - name: TIBCO CIC Compute Dev Team
-    email: compute-dev@tibco.com
+version: 1.1.67
+appVersion: "1.1.0"
+description: Data Plane Infrastructre Core -- o11y-service
