--- a/charts/tp-cp-proxy/templates/deployment.yaml
+++ b/charts/tp-cp-proxy/templates/deployment.yaml
@@ -74,6 +74,10 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: status.hostIP
+        {{- with .Values.fluentbit.resources }}
+        resources:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}    
         volumeMounts:
           - name: podlogs
             mountPath: /var/log/pods
