--- a/charts/tp-provisioner-agent/templates/deployment.yaml
+++ b/charts/tp-provisioner-agent/templates/deployment.yaml
@@ -93,6 +93,10 @@ spec:
             value: {{ .Release.Name }}
           - name: DATAPLANE_ID
             value: {{ .Values.global.tibco.dataPlaneId }}
+        {{- with .Values.fluentbit.resources }}
+        resources:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}            
         volumeMounts:
           - name: podlogs
             mountPath: /var/log/pods
