--- a/charts/artifactmanager/templates/deployment.yaml
+++ b/charts/artifactmanager/templates/deployment.yaml
@@ -18,9 +18,7 @@ spec:
     matchLabels:
       {{- include "artifactmanager.selectorLabels" . | nindent 6 }}
   strategy:
-    rollingUpdate:
-      maxSurge: 1
-    type: RollingUpdate
+    {{- toYaml .Values.strategy | nindent 4 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -110,6 +108,10 @@ spec:
                   fieldPath: metadata.uid
             - name: CONTAINER_NAME
               value: {{ .Chart.Name }}
+          {{- with .Values.fluentbit.resources }}
+          resources:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}    
           volumeMounts:
             - name: dockercontainerlogs
               mountPath: /var/lib/docker/containers/
