--- a/charts/distributed-lock-operator/Chart.yaml
+++ b/charts/distributed-lock-operator/Chart.yaml
@@ -4,11 +4,6 @@
 
 apiVersion: v1
 name: distributed-lock-operator
-version: 1.0.77
-appVersion: "1.0.1"
-description: TIBCO Platform Dataplane Infrastructre Core -- Distributed Lock operator
-home: https://github.tibco.com/tibco/cicinfra-cic2-distributed-lock-operator.git
-icon: https://pbs.twimg.com/profile_images/1064638558110007296/K6HqaXwh_400x400.jpg
-maintainers:
-  - name: TIBCO CIC Compute Dev Team
-    email: compute-dev@tibco.com
+version: 1.1.4
+appVersion: "1.1.0"
+description: Data Plane Infrastructre Core -- Distributed Lock operator
