--- a/charts/dp-config-aks/Chart.yaml
+++ b/charts/dp-config-aks/Chart.yaml
@@ -4,14 +4,10 @@
 
 apiVersion: v2
 name: dp-config-aks
-version: "1.0.16"
+version: "1.0.19"
 appVersion: "1.0.1"
 description: dp-config-aks is used to config non-CIC2 TIBCO Dataplane
 type: application
-home: https://github.com/tibco/cicinfra-integration
-maintainers:
-  - name: TIBCO Cloud Dev Team
-    email: cloud@tibco.com
 dependencies:
   - name: traefik
     version: 24.0.0
@@ -21,7 +17,11 @@ dependencies:
     version: 4.7.2
     repository: https://kubernetes.github.io/ingress-nginx
     condition: ingress-nginx.enabled
+  - name: kong
+    version: 2.33.3
+    repository: https://charts.konghq.com
+    condition: kong.enabled
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Added nginx"
+      description: "Added kong"
