--- a/charts/dp-config-es/templates/index-template-jaeger-service.yaml
+++ b/charts/dp-config-es/templates/index-template-jaeger-service.yaml
@@ -17,66 +17,48 @@ spec:
       "priority": 5,
       "index_patterns": ["*jaeger-service-*"],
       "template": {
+        "aliases": {
+          "jaeger-service-read": {}
+        },
         "settings": {
-          "index": {
-            "mapping": {
-              "nested_fields": {
-                "limit": "50"
-              }
-            },
-            "requests": {
-              "cache": {
-                "enable": "true"
-              }
-            },
-            "number_of_shards": "6",
-            "number_of_replicas": "1",
-            "lifecycle.name": "{{ .Release.Name }}-jaeger-index-30d-lifecycle-policy",
-            "lifecycle.rollover_alias": "jaeger-service-write"
+          "index.number_of_shards": 6,
+          "index.number_of_replicas": 1,
+          "index.mapping.nested_fields.limit": 50,
+          "index.requests.cache.enable": true,
+          "lifecycle": {
+            "name": {{ .Release.Name }}-jaeger-index-30d-lifecycle-policy,
+            "rollover_alias": "*jaeger-service-write"
           }
         },
         "mappings": {
-          "_routing": {
-            "required": false
-          },
-          "numeric_detection": false,
-          "dynamic_date_formats": [
-            "strict_date_optional_time",
-            "yyyy/MM/dd HH:mm:ss Z||yyyy/MM/dd Z"
-          ],
-          "_source": {
-            "excludes": [],
-            "includes": [],
-            "enabled": true
-          },
-          "dynamic": true,
           "dynamic_templates": [
             {
               "span_tags_map": {
-                "path_match": "tag.*",
                 "mapping": {
-                  "ignore_above": 256,
-                  "type": "keyword"
-                }
+                  "type": "keyword",
+                  "ignore_above": 256
+                },
+                "path_match": "tag.*"
               }
             },
             {
               "process_tags_map": {
-                "path_match": "process.tag.*",
                 "mapping": {
-                  "ignore_above": 256,
-                  "type": "keyword"
-                }
+                  "type": "keyword",
+                  "ignore_above": 256
+                },
+                "path_match": "process.tag.*"
               }
             }
           ],
-          "date_detection": true,
           "properties": {
-            "operationName": {
-              "type": "keyword"
-            },
             "serviceName": {
-              "type": "keyword"
+              "type": "keyword",
+              "ignore_above": 256
+            },
+            "operationName": {
+              "type": "keyword",
+              "ignore_above": 256
             }
           }
         }
