--- a/charts/dp-core-infrastructure/Chart.yaml
+++ b/charts/dp-core-infrastructure/Chart.yaml
@@ -3,16 +3,16 @@
 # in the license file that is distributed with this file.
 
 apiVersion: v2
-appVersion: 1.0.1
+appVersion: 1.1.0
 dependencies:
 - condition: tp-tibtunnel.enabled
   name: tp-tibtunnel
   repository: alias:tibco-platform
-  version: 1.0.97
+  version: 1.1.4
 - condition: tp-provisioner-agent.enabled
   name: tp-provisioner-agent
   repository: alias:tibco-platform
-  version: 1.0.202
+  version: 1.1.6
 - condition: haproxy-ingress.enabled
   name: haproxy-ingress
   repository: ""
@@ -21,7 +21,7 @@ dependencies:
   name: config
   repository: ""
   version: 1.0.0
-description: A Helm chart for TIBCO Platform Data Plane Infrastructure
+description: A Helm chart for Data Plane Infrastructure
 name: dp-core-infrastructure
 type: application
-version: 1.0.263
+version: 1.1.10
