--- a/charts/tp-cp-proxy/Chart.yaml
+++ b/charts/tp-cp-proxy/Chart.yaml
@@ -3,15 +3,10 @@
 # in the license file that is distributed with this file.
 
 apiVersion: v2
-appVersion: 1.0.0
-description: TIBCO Data Plane -- Control Plane Proxy
-home: https://github.com/tibco/tp-core-cp-proxy
-icon: https://pbs.twimg.com/profile_images/1064638558110007296/K6HqaXwh_400x400.jpg
+appVersion: "1.1.0"
+description: Data Plane -- Control Plane Proxy
 keywords:
 - cp-proxy
 - data-plane
-maintainers:
-- email: compute-dev@tibco.com
-  name: TIBCO CIC Compute Dev Team
 name: tp-cp-proxy
-version: 1.0.110
+version: 1.1.4
