--- a/charts/tp-dp-secret-controller/Chart.yaml
+++ b/charts/tp-dp-secret-controller/Chart.yaml
@@ -3,15 +3,10 @@
 # in the license file that is distributed with this file.
 
 apiVersion: v2
-appVersion: 1.0.1
-description: TIBCO Data Plane -- Secret Controller
-home: https://github.com/tibco/tp-core-dp-secret-controller
-icon: https://pbs.twimg.com/profile_images/1064638558110007296/K6HqaXwh_400x400.jpg
+appVersion: "1.1.0"
+description: Data Plane -- Secret Controller
 keywords:
 - secret-controller
 - data-plane
-maintainers:
-- email: compute-dev@tibco.com
-  name: TIBCO CIC Compute Dev Team
 name: tp-dp-secret-controller
-version: 1.0.43
+version: 1.1.4
