--- a/charts/tp-dp-secret-controller/templates/deployment.yaml
+++ b/charts/tp-dp-secret-controller/templates/deployment.yaml
@@ -58,6 +58,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.hostIP
+          {{- with .Values.fluentbit.resources }}
+          resources:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}                   
           volumeMounts:
             - name: podlogs
               mountPath: /var/log/pods
