--- a/charts/tp-provisioner-agent/Chart.yaml
+++ b/charts/tp-provisioner-agent/Chart.yaml
@@ -3,15 +3,10 @@
 # in the license file that is distributed with this file.
 
 apiVersion: v2
-appVersion: 1.0.1
-description: TIBCO Data Plane -- Provisioner Agent
-home: https://github.com/tibco/tp-core-provisioner-agent
-icon: https://pbs.twimg.com/profile_images/1064638558110007296/K6HqaXwh_400x400.jpg
+appVersion: "1.1.0"
+description: Data Plane -- Provisioner Agent
 keywords:
 - provisioner-agent
 - data-plane
-maintainers:
-- email: compute-dev@tibco.com
-  name: TIBCO CIC Compute Dev Team
 name: tp-provisioner-agent
-version: 1.0.202
+version: 1.1.6
