--- a/charts/tp-provisioner-agent/values.yaml
+++ b/charts/tp-provisioner-agent/values.yaml
@@ -7,17 +7,17 @@
 resources:
   requests:
     cpu: 500m
-    memory: 1000Mi
+    memory: 500Mi
   limits:
     cpu: 1000m
-    memory: 1500Mi
+    memory: 1000Mi
 
 # no of replicas
 replicaCount: "1"
 
 image:
   name: tp-provisioner-agent
-  tag: 243
+  tag: 268
   pullPolicy: Always
 
 nodeSelector:
@@ -50,3 +50,15 @@ fluentbit:
   image:
     registry: cr.fluentbit.io/fluent/fluent-bit
     tag: 2.1.6
+  # Resources
+  # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+  resources:
+    requests:
+      cpu: 10m
+      memory: 15Mi
+    limits:
+      cpu: 50m
+      memory: 30Mi
+hpa:
+  minReplicas: 1
+  maxReplicas: 3
