--- a/charts/tp-tibtunnel/Chart.yaml
+++ b/charts/tp-tibtunnel/Chart.yaml
@@ -3,16 +3,11 @@
 # in the license file that is distributed with this file.
 
 apiVersion: v1
-appVersion: 1.0.0
+appVersion: "1.1.0"
 description: A Helm chart for TIBCO Tibtunnel
-home: https://github.com/tibco/tp-core-tibtunnel
-icon: https://pbs.twimg.com/profile_images/1064638558110007296/K6HqaXwh_400x400.jpg
 keywords:
 - tibtunnel
 - data-plane
 - hybrid-connectivity
-maintainers:
-- email: compute-dev@tibco.com
-  name: TIBCO CIC Compute Dev Team
 name: tp-tibtunnel
-version: 1.0.97
+version: 1.1.4
