--- a/docs/workshop/dp-cluster/eks/eksctl-recipe.yaml
+++ b/docs/workshop/dp-cluster/eks/eksctl-recipe.yaml
@@ -2,7 +2,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 metadata:
   name: ${DP_CLUSTER_NAME}
-  region: ${AWS_REGION}
+  region: ${DP_CLUSTER_REGION}
   version: "1.28"
 nodeGroups:
   - name: ng-1
