Reverted dp-core-infra chart changes

--- a/charts/dp-core-infrastructure/charts/haproxy-ingress/values.yaml
+++ b/charts/dp-core-infrastructure/charts/haproxy-ingress/values.yaml
@@ -224,6 +224,8 @@ controller:
   ##
   updateStrategy:
     type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
 
   # minReadySeconds to avoid killing pods before we are ready
   ##
@@ -235,21 +237,20 @@ controller:
   # PodDisruptionBudget
   minAvailable: 1
 
-  resources:
-   limits:
-     cpu: 200m
-     memory: 256Mi
-   requests:
-     cpu: 100m
-     memory: 128Mi
+  resources: {}
+  #  limits:
+  #    cpu: 100m
+  #    memory: 64Mi
+  #  requests:
+  #    cpu: 100m
+  #    memory: 64Mi
 
   autoscaling:
-    enabled: true
-    minReplicas: 1
-    maxReplicas: 3
-    targetCPUUtilizationPercentage: 70
-    targetMemoryUtilizationPercentage: 70
-    customMetrics: []
+    enabled: false
+    #  minReplicas: 1
+    #  maxReplicas: 11
+    #  targetCPUUtilizationPercentage: 50
+    #  targetMemoryUtilizationPercentage: 50
 
   ## Node tolerations for server scheduling to nodes with taints
   ## Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
