--- a/charts/dp-core-infrastructure/charts/haproxy-ingress/values.yaml
+++ b/charts/dp-core-infrastructure/charts/haproxy-ingress/values.yaml
@@ -251,6 +251,7 @@ controller:
     #  maxReplicas: 11
     #  targetCPUUtilizationPercentage: 50
     #  targetMemoryUtilizationPercentage: 50
+    customMetrics: []
 
   ## Node tolerations for server scheduling to nodes with taints
   ## Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
